Bug 581859 - Added high priority workspace job for loading typelib
On project add or import this high priority workspace job shall
correctly update the typelib before anything else is triggered.

Change-Id: I76f4ac7de1c0ba9e28a5eeb7c78b85fa57f2b20a